--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: semitechnologies/weaviate:1.15.0
+    image: semitechnologies/weaviate:latest
     ports:
     - 8080:8080
     restart: on-failure:0
@@ -32,7 +32,7 @@ services:
     - '8080'
     - --scheme
     - http
-    image: semitechnologies/weaviate:1.15.0
+    image: semitechnologies/weaviate:latest
     ports:
     - 8090:8080
     restart: on-failure:0
